# arboretum

./: .cursorignore  .gitignore  .gitmodules  AGENTS.md  BUILD_SYSTEM.md  CODE_QUALITY.md  Cargo.toml  DOCS_INDEX.md  LONG_TERM_PLAN_DRAFT.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  TASKS.md
arboretum/: Cargo.toml  run.sh
arboretum-core/: Cargo.toml
arboretum-core/src/: constant.rs  domain.rs  graph_buffer.rs  lib.rs  map_id.rs  prefix.rs  types.rs  value.rs
arboretum-ffi/: AGENTS.md  Cargo.toml
arboretum-ffi/src/: arboretum_ffi.h  lib.rs  object_builder.rs  tcp_client.rs
arboretum-graph/: Cargo.toml
arboretum-graph/src/: cache.rs  constant.rs  domain.rs  error.rs  graph_buffer.rs  lib.rs  memory_info.rs  mmap.rs  prefix.rs  root_graph.rs  sled.rs  smart_mmap_builder.rs  subgraph.rs  subgraph_config.rs  subgraph_entry.rs
arboretum-graph/src/mmap/: builder.rs  inner.rs  iter.rs
arboretum-graph/src/sled/: graph.rs  string_storage.rs
arboretum-graphql/: Cargo.toml  out.txt
arboretum-graphql/src/: main.rs  model.rs
arboretum-graphql/src/model/: attr_node.rs  decl_node.rs  stmt_node.rs  type_node.rs
arboretum-graphql/src/model/attr_node/: inheritable_attr_node.rs
arboretum-graphql/src/model/attr_node/inheritable_attr_node/: hlsl_annotation_attr_node.rs
arboretum-graphql/src/model/decl_node/: named_decl_node.rs
arboretum-graphql/src/model/decl_node/named_decl_node/: base_using_decl_node.rs  obj_c_container_decl_node.rs  template_decl_node.rs  type_decl_node.rs  using_shadow_decl_node.rs  value_decl_node.rs
arboretum-graphql/src/model/decl_node/named_decl_node/type_decl_node/: tag_decl_node.rs
arboretum-graphql/src/model/decl_node/named_decl_node/type_decl_node/tag_decl_node/: record_decl_node.rs
arboretum-graphql/src/model/decl_node/named_decl_node/value_decl_node/: declarator_decl_node.rs
arboretum-graphql/src/model/decl_node/named_decl_node/value_decl_node/declarator_decl_node/: field_decl_node.rs  function_decl_node.rs
arboretum-graphql/src/model/stmt_node/: asm_stmt_node.rs  value_stmt_node.rs
arboretum-graphql/src/model/stmt_node/value_stmt_node/: expr_node.rs
arboretum-graphql/src/model/stmt_node/value_stmt_node/expr_node/: abstract_conditional_operator_node.rs  binary_operator_node.rs  cast_expr_node.rs  coroutine_suspend_expr_node.rs  cxx_construct_expr_node.rs  overload_expr_node.rs
arboretum-graphql/src/model/type_node/: adjusted_type_node.rs  array_type_node.rs  decltype_type_node.rs  deduced_type_node.rs  function_type_node.rs  matrix_type_node.rs  obj_c_object_type_node.rs  reference_type_node.rs  tag_type_node.rs  type_of_expr_type_node.rs  type_with_keyword_node.rs  unary_transform_type_node.rs  vector_type_node.rs
arboretum-plugin/: AGENTS.md
arboretum-plugin/src/: plugin.cc
arboretum-py/: Cargo.toml  pyproject.toml
arboretum-py/src/: lib.rs
arboretum-query/: Cargo.toml
arboretum-query/src/: http_reqwasm.rs  http_reqwest.rs  lib.rs  local.rs  path.rs
arboretum-ui/: Cargo.toml  README.md  Trunk.toml  index.html
arboretum-ui-protocol/: Cargo.toml
arboretum-ui-protocol/src/: lib.rs
arboretum-ui/src/: control_flow.rs  data_flow.rs  files.rs  force_directed.rs  invocations.rs  lib.rs  query.rs  render.rs  state.rs  view_transform.rs
arboretum-ui/src/listeners/: mod.rs  mousedown.rs  mousemove.rs  mouseup.rs  resize.rs  scroll.rs  visibility.rs
arboretum/src/: api.rs  arboretum.cc  main.rs
arboretum/src/clang_annotation/: mod.rs
arboretum/src/graph/: mod.rs  modify.rs  read.rs  subscribe.rs
arboretum/src/module_layout/: mod.rs
arboretum/src/networking/: mod.rs
arboretum/src/rust_annotation/: mod.rs
arboretum/src/rust_syntax/: mod.rs
arboretum/src/tcp_server/: mod.rs
arboretum/src/translation/: mod.rs
arboretum/src/z3_actor/: mod.rs
arboretumd/: Cargo.toml  README.md  run.sh
arboretumd/src/: api.rs  clang_collector.rs  main.rs
media/: AGENTS.md
reificator/: AGENTS.md  input.cc  properties.csv
reificator/include/: datatype.h  decl_handler.h  emit_ffi.h  emit_graphql_model.h  emit_reify_cpp.h  emit_reify_rs.h  field.h  get_usr.h  index.h  index_builder.h  method_handler.h  model.h  name_registry.h  partially_generated_file.h  table.h  util.h
reificator/src/: datatype.cc  emit_ffi.cc  emit_graphql_model.cc  emit_reify_cpp.cc  emit_reify_rs.cc  field.cc  get_usr.cc  index_builder.cc  model.cc  name_registry.cc  partially_generated_file.cc  reificator.cc  table.cc  util.cc
reify-cpp/: AGENTS.md
reify-cpp/include/: arboretum_ast_visitor.h  arboretum_context.h  arboretum_data_model.h  arboretum_source_model.h
reify-cpp/src/: arboretum_ast_visitor.cc  arboretum_context.cc  arboretum_data_model.cc  arboretum_source_model.cc
reify-rs/: AGENTS.md  Cargo.toml
reify-rs/src/: ffi.rs  io.rs  lib.rs
scripts/: validate_properties.py
tests/: AGENTS.md  TESTING_PLAN.md  TESTING_SUMMARY.md  run.sh
tests/0/: AGENTS.md  a.cc  b.cc  c.cc  d.cc
tests/expected/: record_counts.json  schema.md
tests/testdata/declarations/: classes.cc  enums.cc  functions.cc  namespaces.cc  templates.cc  variables.cc
tests/testdata/expressions/: arithmetic.cc  conditional.cc  literals.cc
tests/testdata/statements/: if_stmt.cc  loop_stmts.cc  switch_stmt.cc  try_catch.cc
tests/v2/: __init__.py  compiler.py  conftest.py  postgres.py  runner.py  verifier.py
tests/v2/tests/: __init__.py  test_classes.py  test_declarations.py  test_edge_cases.py  test_enums.py  test_expressions.py  test_integrations.py  test_namespaces.py  test_schema.py  test_statements.py  test_templates.py  test_types.py
