[package]
name = "arboretum-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
simple-triplestore = {path = "../../triplestore/"}
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = "1.1.3"
