[package]
name = "arboretum-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["io-util", "net", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
async-compression = { version = "0.4.12", features = ["lzma", "tokio"] }
