[package]
name = "arboretum-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
force_graph = "0.3.2"
geo-index = "0.1.1"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.69", features = ["Document", "TextMetrics",  "HtmlCanvasElement", "HtmlInputElement", "console", "VisibilityState", "CanvasRenderingContext2d", "Performance", "Window", "DomRect", "WheelEvent", "MouseEvent", "Path2d", "Response"] }
arboretum-query = {path="../arboretum-query/", features=["http_reqwasm"]}
arboretum-core = {path="../arboretum-core/"}
reify-rs = {path="../reify-rs/"}

[lib]
crate-type = ["cdylib"]
