[package]
name = "arboretum"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-server = "2.5.0"
actix-service = "2.0.2"
clap = { version = "4.5.13", features = ["derive"] }
arboretum-graph = {path="../../arboretum-graph/"}
arboretum-ffi = {path="../arboretum-ffi/"}
reify-rs = {path="../reify-rs/"}
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
bincode = "1.3.3"
tracing-subscriber = "0.3.18"
async-compression = { version = "0.4.12", features = ["lzma", "tokio"] }

[dev-dependencies]
tempdir = "0.3.7"
