[package]
name = "reify-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrow = "54.0.0"
bincode = "1.3.3"
lazy_static = "1.5.0"
parquet = { version = "54.1.0", features = ["async"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs", "io-util"] }
tracing = "0.1.41"

